fix z-index on catalog categoru page, edit view for info popup

--- a/app/design/frontend/Pixelpro/ThemePro/Magento_Catalog/web/css/source/_list.less
+++ b/app/design/frontend/Pixelpro/ThemePro/Magento_Catalog/web/css/source/_list.less
@@ -503,6 +503,7 @@
     background-color: @white;
     border-bottom: 1px solid @lightGray;
     border-radius: 4px;
+    z-index: 1;
 
     &:before {
         content: "<";
