--- a/app/design/frontend/Pixelpro/ThemePro/Magento_Catalog/web/css/source/_sorter.less
+++ b/app/design/frontend/Pixelpro/ThemePro/Magento_Catalog/web/css/source/_sorter.less
@@ -15,10 +15,7 @@
         width: 18px;
         height: 18px;
     }
-    #toolbar-sorter__modal {
-        display: none;
-    }
-    #toolbar-sorter__modal.active {
+    #toolbar-modal {
         position: fixed;
         display: flex;
         flex-direction: column;
@@ -30,28 +27,45 @@
         right: 0;
         top: 100px;
         padding: 20px;
-        width: 40%;
-        height: 80%;
+        width: 60%;
+        height: 55%;
         border: 1px solid #888888;
         background-color: #fefefe;
         overflow: hidden;
+        opacity: 0;
+        transform: scale(0);
+        transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out,
+            z-index 0.5s ease-in-out;
+        z-index: -1;
+        &__close {
+            position: absolute;
+            top: 0;
+            right: 20px;
+            font-size: 32px;
+            color: @blue-600;
+        }
+    }
+    #toolbar-modal.active {
+        opacity: 1;
+        transform: scale(1);
         z-index: 5;
     }
 
     #toolbar-sorter__overlay {
-        display: none;
+        opacity: 0;
     }
     #toolbar-sorter__overlay.active {
         display: block;
         position: fixed;
-        z-index: 0;
-        padding-top: 100px;
         left: 0;
         top: 0;
         width: 100%;
         height: 100%;
-        overflow: auto;
+        padding-top: 100px;
         background-color: rgba(0, 0, 0, 0.4);
+        overflow: auto;
+        opacity: 1;
+        z-index: 4;
     }
     #sorter {
         max-width: 175px;
