--- a/app/design/frontend/Pixelpro/ThemePro/Magento_Search/web/css/source/_form.less
+++ b/app/design/frontend/Pixelpro/ThemePro/Magento_Search/web/css/source/_form.less
@@ -11,6 +11,7 @@
         background-color: @white;
         border-radius: 24px;
         cursor: pointer;
+        z-index: unset;
 
         input {
             background-color: transparent;
